--- a/cake.html
+++ b/cake.html
@@ -3,6 +3,7 @@
 <html lang="tr">
 <head>
   <title>Pastaneci</title>
+  <link rel="stylesheet" type="text/css" href="cake.css">
 </head>                    
 <body>
   <div class="openTheGame" id="profile">
