--- a/cake.html
+++ b/cake.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
-<html>
 <html lang="tr">
 <head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Pastaneci</title>
-  <link rel="stylesheet" type="text/css" href="cake.css">
-</head>                    
+  <link rel="stylesheet" href="Dosya/cake.css">
+  <script src="Dosya/cake.js"></script>
+</head>
 <body>
   <div class="openTheGame" id="profile">
     <div id="openTheGame">
@@ -85,6 +87,6 @@
       </div>
     </div>
   </div>
+  <script src="site.js"></script>
 </body>
-
 </html>
