--- a/cake.html
+++ b/cake.html
@@ -4,9 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Pastaneci</title>
-  <link rel="stylesheet" href="Dosya/cake.css">
-    
-  <script src="Dosya/cake.js"></script>
+  <link rel="stylesheet" href="dosya/cake.css">
+  <script src="dosya/cake.js"></script>
 </head>
 <body>
   <div class="openTheGame" id="profile">
@@ -88,6 +87,9 @@
       </div>
     </div>
   </div>
+  <script src="site.js"></script>
+</body>
+</html>
   <script src="site.js"></script>
 </body>
 </html>
